--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Ucode_Connect_Race01",
+  "name": "ucode_connect_race01",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
